--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -69,7 +69,7 @@ const currentYear = new Date().getFullYear();
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
 
     <ViewTransitions />
-    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    {/* <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> */}
 	</head>
 	<body>
     <header class="site-header">
