--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -223,7 +223,14 @@ const homepageTestimonials = await getCollection('testimonials', ({ data }) => d
     <section class="contact-form-section">
       <div class="container">
         <h2 class="section-heading">{homepageContent.contact_section_heading}</h2>
-        <form class="contact-form" name="homepage-contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+        <form 
+          class="contact-form" 
+          name="homepage-contact" 
+          method="POST" 
+          data-netlify="true" 
+          netlify-honeypot="bot-field"
+          action="/thank-you/"
+        >
           <input type="hidden" name="form-name" value="homepage-contact" />
           <p class="hidden">
             <label>
