yet another form fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -225,13 +225,13 @@ const homepageTestimonials = await getCollection('testimonials', ({ data }) => d
         <h2 class="section-heading">{homepageContent.contact_section_heading}</h2>
         <form 
           class="contact-form" 
-          name="homepage-contact" 
+          name="contact-index-v2" 
           method="POST"
           data-netlify="true"
           netlify-honeypot="bot-field"
           action="/thank-you/" 
         >
-          <input type="hidden" name="form-name" value="homepage-contact" />
+          <input type="hidden" name="form-name" value="contact-index-v2" />
           <p class="hidden">
             <label>
               Don't fill this out if you're human: <input name="bot-field" />
