yet another form fix, test

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -238,6 +238,10 @@ const homepageTestimonials = await getCollection('testimonials', ({ data }) => d
             </label>
           </p>
           <div class="form-group">
+            <label for="netlify-test-field">Netlify Test Field</label>
+            <input type="text" name="netlify-test-field" id="netlify-test-field" value="TestValue123" />
+          </div>
+          <div class="form-group">
             <label for="name">Jméno</label>
             <input type="text" name="name" id="name" required />
           </div>
