another form fix, maybe last

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -229,6 +229,7 @@ const homepageTestimonials = await getCollection('testimonials', ({ data }) => d
           method="POST"
           data-netlify="true"
           netlify-honeypot="bot-field"
+          data-astro-reload
         >
           <input type="hidden" name="form-name" value="contact-index-v2" />
           <p class="hidden">
