--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -59,6 +59,7 @@ const staticFormName = "contact-kontaktpage-v2"; // Static form name
             method="POST" 
             data-netlify="true" 
             data-netlify-honeypot="bot-field"
+            data-astro-reload
           >
             <input type="hidden" name="form-name" value={staticFormName} />
             <p class="hidden">
